<resources>
    <string name="app_name">Desarrolo Academico</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuraciones</string>
    <string name="title_activity_settings">Cofiguraciones</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
...
